Disable ssh from git2 cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/amrdeveloper/gql"
 
 [dependencies]
-git2 = "0.17.1"
+git2 = { version = "0.17.1",  features = ["vendored-libgit2"] }
 regex = "1"
 lazy_static = "1.4.0"
 termcolor = "1.2.0"
