--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,7 +35,9 @@ jobs:
 
     steps:
       - name: Install OpenSSL
-        run: sudo apt-get update && sudo apt-get install -y libssl-dev
+        run: |
+          sudo apt-get install libssl-dev
+          export PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/local/lib/pkgconfig
 
       - name: Inputs from workflow dispatch
         shell: bash
