--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ license = "MIT"
 repository = "https://github.com/amrdeveloper/gql"
 
 [dependencies]
-git2 = { version = "0.17.1",  features = ["vendored-libgit2"] }
+git2 = "0.17.1"
 regex = "1"
 lazy_static = "1.4.0"
 termcolor = "1.2.0"
+
+[build-dependencies.git2]
+version = "0.17.1"
+default-features = false
