Don't use `git2` default features as they are not needed.
This reduces the amount of dependencies from 102 to 94.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["command-line-utilities"]
 exclude = [".github/**"]
 
 [dependencies]
-git2 = "0.17.1"
+git2 = { version = "0.17.1", default-features = false }
 regex = "1"
 lazy_static = "1.4.0"
 termcolor = "1.2.0"
