--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/amrdeveloper/gql/"
 readme = "README.md"
 categories = ["command-line-utilities"]
-exclude = [".github/**"]
+exclude = [".github/**", "docs/**", "media/**", "scripts/**"]
 
 [dependencies]
 git2 = { version = "0.17.1", default-features = false }
@@ -17,4 +17,3 @@ lazy_static = "1.4.0"
 termcolor = "1.2.0"
 prettytable-rs = "^0.10"
 textwrap = "0.16.0"
-openssl = { version = "0.10", features = ["vendored"] }
