--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "gql"
+name = "gitql"
 authors = ["AmrDeveloper"]
 version = "0.2.0"
 edition = "2021"
-description = "Git query language"
+description = "A SQL like query language to perform queries on .git files"
 license = "MIT"
 repository = "https://github.com/amrdeveloper/gql/"
 readme = "README.md"
+keywords = ["cli", "gql", "language", "git", "sql"]
 categories = ["command-line-utilities"]
 exclude = [".github/**", "docs/**", "media/**", "scripts/**"]
 
