--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -147,12 +147,12 @@ jobs:
           bin="gql-${{ matrix.name }}"
 
           if [ "${{ matrix.os }}" = "windows-2022" ]; then
-            cp "target/${{ matrix.target }}/release/gql.exe" "$bin.exe"
+            cp "target/${{ matrix.target }}/release/gitql.exe" "$bin.exe"
             python scripts/sha256.py $bin.exe > "$bin.exe.sha256"
             echo "ASSET=$bin.exe" >> $GITHUB_ENV
             echo "SHA256_FILE=$bin.exe.sha256" >> $GITHUB_ENV
           else
-            cp "target/${{ matrix.target }}/release/gql" "$bin"
+            cp "target/${{ matrix.target }}/release/gitql" "$bin"
             gzip "$bin"
             python scripts/sha256.py $bin.gz > "$bin.gz.sha256"
             echo "ASSET=$bin.gz" >> $GITHUB_ENV
