--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,7 +61,7 @@ nav:
       - Binary: expression/binary.md
       - Case: expression/case.md
   - Function:
-      - Transformation: function/transformations.md
+      - Functions: function/functions.md
       - Aggregations: function/aggregations.md
   - Libraries: libraries.md
 
