--- a/crates/gitql-engine/Cargo.toml
+++ b/crates/gitql-engine/Cargo.toml
@@ -9,5 +9,5 @@ license = "MIT"
 
 [dependencies]
 gitql-ast = { path = "../gitql-ast", version = "0.2.0" }
-git2 = { version = "0.17.1", default-features = false }
+gix = { version = "0.53.0", default-features = false, features = ["blob-diff"] }
 regex = "1.8.4"
