--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,12 @@ members = [
     "crates/gitql-engine",
 ]
 
+[workspace.dependencies]
+gix = { version = "0.55.2", default-features = false }
+
 [dependencies]
 gitql-ast = { path = "./crates/gitql-ast", version = "0.7.0" }
 gitql-parser = { path = "./crates/gitql-parser", version = "0.8.0" }
 gitql-engine = { path = "./crates/gitql-engine", version = "0.9.0" }
 gitql-cli = { path = "./crates/gitql-cli", version = "0.9.0" }
-gix = { version = "0.55.2", default-features = false, features = [
-    "max-performance",
-] }
+gix = { workspace = true, features = ["max-performance"] }
