--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ gitql-parser = { path = "./crates/gitql-parser", version = "0.8.0" }
 gitql-engine = { path = "./crates/gitql-engine", version = "0.9.0" }
 gitql-cli = { path = "./crates/gitql-cli", version = "0.9.0" }
 gix = { workspace = true, features = ["max-performance"] }
+atty = "0.2.14"
