feat: Support user defined global variables

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
       - Tables: structure/tables.md
       - Types: structure/types.md
   - Statement:
+      - Variables: statement/variables.md
       - Select: statement/select.md
       - Where: statement/where.md
       - Group by: statement/group_by.md
