feat: Allow passing dynamic schema to the gitql engine

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ gitql-engine = { path = "./crates/gitql-engine", version = "0.13.0" }
 gitql-cli = { path = "./crates/gitql-cli", version = "0.13.0" }
 gix = { workspace = true, features = ["max-performance"] }
 atty = "0.2.14"
+lazy_static = "1.4.0"
