--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,7 +82,7 @@ nav:
   - Function:
       - Functions: function/functions.md
       - Aggregations: function/aggregations.md
-  - Libraries: libraries.md
+  - GitQL SDK: sdk.md
 
 extra:
   social:
