--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
       - Order by: statement/order_by.md
       - Limit & Offset: statement/limit_and_offset.md
   - Expression:
+      - Array: expression/array.md
       - Unary: expression/unary.md
       - Binary: expression/binary.md
       - Case: expression/case.md
