feat; Support `Range` type and implement int4range function

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
       - Date/Time: functions/datetime.md
       - Regex: functions/regex.md
       - Array: functions/array.md
+      - Range: functions/range.md
       - Other: functions/other.md
       - Aggregate Functions: functions/aggregations.md
   - GitQL Functions: gitql_functions.md
