Add LTO to the Release profile
Partially resolve https://github.com/AmrDeveloper/GQL/discussions/116

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ members = [
 [workspace.dependencies]
 gix = { version = "0.64.0", default-features = false }
 
+[profile.release]
+lto = true
+
 [dependencies]
 gitql-core = { path = "./crates/gitql-core", version = "0.4.0" }
 gitql-std = { path = "./crates/gitql-std", version = "0.4.0" }
