--- a/crates/gitql-cli/Cargo.toml
+++ b/crates/gitql-cli/Cargo.toml
@@ -15,3 +15,5 @@ gitql-ast = { path = "../gitql-ast", version = "0.25.0" }
 gitql-parser = { path = "../gitql-parser", version = "0.27.0" }
 comfy-table = "7.1.0"
 termcolor = "1.4.1"
+serde_json = "1.0.115"
+csv = "1.3.0"
