Remove the local path for lineeditor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ gitql-ast = { path = "./crates/gitql-ast", version = "0.25.0" }
 gitql-parser = { path = "./crates/gitql-parser", version = "0.27.0" }
 gitql-engine = { path = "./crates/gitql-engine", version = "0.28.0" }
 gitql-cli = { path = "./crates/gitql-cli", version = "0.28.0" }
-lineeditor = { path = "../lineeditor", version = "0.4.0" }
+lineeditor = "0.4.0"
 gix = { workspace = true, features = ["blob-diff", "max-performance"] }
 atty = "0.2.14"
 
