Add a docs for Window functions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -118,6 +118,7 @@ nav:
       - Range: functions/range.md
       - Other: functions/other.md
       - Aggregate Functions: functions/aggregations.md
+      - Window Functions: functions/window.md
     - GitQL Functions: gitql_functions.md
   - GitQL SDK:
     - "sdk/index.md"
