--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gitql"
 authors = ["AmrDeveloper"]
-version = "0.32.0"
+version = "0.33.0"
 edition = "2021"
 description = "A SQL like query language to perform queries on .git files"
 license = "MIT"
@@ -24,19 +24,31 @@ members = [
 
 [workspace.dependencies]
 gix = { version = "0.68.0", default-features = false }
+dyn-clone = { version = "1.0.17" }
+comfy-table = { version = "7.1.3" }
+termcolor = { version = "1.4.1" }
+serde_json = { version = "1.0.133" }
+csv = { version = "1.3.1" }
+chrono = { version = "0.4.39" }
+regex = { version = "1.11.1" }
+rand = { version = "0.8.5" }
+indexmap = { version = "2.7.0" }
+uuid = { version = "1.11.0", features = ["v4"] }
 
 [profile.release]
 lto = true
 
 [dependencies]
-gitql-core = { path = "./crates/gitql-core", version = "0.9.0" }
-gitql-std = { path = "./crates/gitql-std", version = "0.9.0" }
-gitql-ast = { path = "./crates/gitql-ast", version = "0.29.0" }
-gitql-parser = { path = "./crates/gitql-parser", version = "0.31.0" }
-gitql-engine = { path = "./crates/gitql-engine", version = "0.32.0" }
-gitql-cli = { path = "./crates/gitql-cli", version = "0.32.0" }
-lineeditor = "0.4.1"
+gitql-core = { path = "./crates/gitql-core", version = "0.10.0" }
+gitql-std = { path = "./crates/gitql-std", version = "0.10.0" }
+gitql-ast = { path = "./crates/gitql-ast", version = "0.30.0" }
+gitql-parser = { path = "./crates/gitql-parser", version = "0.32.0" }
+gitql-engine = { path = "./crates/gitql-engine", version = "0.33.0" }
+gitql-cli = { path = "./crates/gitql-cli", version = "0.33.0" }
+
 gix = { workspace = true, features = ["blob-diff", "max-performance"] }
+
+lineeditor = "0.4.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
