--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -92,12 +92,12 @@ jobs:
             target: aarch64-unknown-linux-musl
             name: aarch64-linux
           - build: macos
-            os: macos-12
+            os: macos-latest
             rust: stable
             target: x86_64-apple-darwin
             name: x86_64-macos
           - build: macos-arm
-            os: macos-12
+            os: macos-latest
             rust: stable
             target: aarch64-apple-darwin
             name: aarch64-macos
