feat: Support overriding `LIKE`, `GLOB` and `REGEXP` for user defined types

--- a/crates/gitql-core/Cargo.toml
+++ b/crates/gitql-core/Cargo.toml
@@ -14,3 +14,4 @@ gitql-ast = { path = "../gitql-ast", version = "0.30.0" }
 chrono = { workspace = true }
 dyn-clone = { workspace = true }
 indexmap = { workspace = true }
+regex = { workspace = true }
