--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,12 @@ comfy-table = { version = "7.1.4" }
 termcolor = { version = "1.4.1" }
 serde_json = { version = "1.0.140" }
 csv = { version = "1.3.1" }
+yaml-rust = { version = "0.4.5" }
 chrono = { version = "0.4.40" }
 regex = { version = "1.11.1" }
 rand = { version = "0.9.0" }
 indexmap = { version = "2.9.0" }
+linked-hash-map = { version = "0.5.6" }
 uuid = { version = "1.16.0", features = ["v4"] }
 
 [profile.release]
