Implement `QUALIFY` statement

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,6 +97,7 @@ nav:
       - Where: statement/where.md
       - Group by: statement/group_by.md
       - Having: statement/having.md
+      - Qualify: statement/qualify.md
       - Order by: statement/order_by.md
       - Limit & Offset: statement/limit_and_offset.md
     - Expression:
