--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gitql"
 authors = ["AmrDeveloper"]
-version = "0.39.0"
+version = "0.40.0"
 edition = "2021"
 description = "A SQL like query language to perform queries on .git files"
 license = "MIT"
@@ -23,8 +23,8 @@ members = [
 ]
 
 [workspace.dependencies]
-gix = { version = "0.72.1", default-features = false }
-dyn-clone = { version = "1.0.19" }
+gix = { version = "0.73.0", default-features = false }
+dyn-clone = { version = "1.0.20" }
 comfy-table = { version = "7.1.4" }
 termcolor = { version = "1.4.1" }
 serde_json = { version = "1.0.140" }
@@ -36,24 +36,30 @@ rand = { version = "0.9.1" }
 indexmap = { version = "2.10.0" }
 linked-hash-map = { version = "0.5.6" }
 uuid = { version = "1.17.0", features = ["v4"] }
+gitql-core = { path = "./crates/gitql-core", version = "0.17.0" }
+gitql-std = { path = "./crates/gitql-std", version = "0.17.0" }
+gitql-ast = { path = "./crates/gitql-ast", version = "0.36.0" }
+gitql-parser = { path = "./crates/gitql-parser", version = "0.39.0" }
+gitql-engine = { path = "./crates/gitql-engine", version = "0.40.0" }
+gitql-cli = { path = "./crates/gitql-cli", version = "0.40.0" }
 
 [profile.release]
 lto = true
 
 [dependencies]
-gitql-core = { path = "./crates/gitql-core", version = "0.16.0" }
-gitql-std = { path = "./crates/gitql-std", version = "0.16.0" }
-gitql-ast = { path = "./crates/gitql-ast", version = "0.35.0" }
-gitql-parser = { path = "./crates/gitql-parser", version = "0.38.0" }
-gitql-engine = { path = "./crates/gitql-engine", version = "0.39.0" }
-gitql-cli = { path = "./crates/gitql-cli", version = "0.39.0" }
+gitql-core = { workspace = true }
+gitql-std = { workspace = true }
+gitql-ast = { workspace = true }
+gitql-parser = { workspace = true }
+gitql-engine = { workspace = true }
+gitql-cli = { workspace = true }
 
 gix = { workspace = true, features = ["blob-diff", "max-performance"] }
 
 lineeditor = "0.4.1"
 
 [dev-dependencies]
-criterion = "0.6.0"
+criterion = "0.7.0"
 
 # Run all benchmarks with `cargo bench`
 # Run individual benchmarks like `cargo bench -- <regex>` e.g. `cargo bench -- tokenizer`
