--- a/crates/gitql-parser/Cargo.toml
+++ b/crates/gitql-parser/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gitql-parser"
 authors = ["AmrDeveloper"]
-version = "0.38.0"
+version = "0.39.0"
 edition = "2021"
 description = "GitQL parser"
 repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-parser"
@@ -10,5 +10,5 @@ keywords = ["cli", "gql", "language", "git", "sql"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-gitql-core = { path = "../gitql-core", version = "0.16.0" }
-gitql-ast = { path = "../gitql-ast", version = "0.35.0" }
+gitql-core = { workspace = true }
+gitql-ast = { workspace = true }
