--- a/crates/gitql-cli/Cargo.toml
+++ b/crates/gitql-cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gitql-cli"
 authors = ["AmrDeveloper"]
-version = "0.40.0"
+version = "0.41.0"
 edition = "2021"
 description = "GitQL Command line interface (CLI) components"
 repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-cli"
@@ -10,9 +10,9 @@ keywords = ["cli", "gql", "language", "git", "sql"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-gitql-core = { path = "../gitql-core", version = "0.17.0" }
-gitql-ast = { path = "../gitql-ast", version = "0.36.0" }
-gitql-parser = { path = "../gitql-parser", version = "0.39.0" }
+gitql-core = { workspace = true }
+gitql-ast = { workspace = true }
+gitql-parser = { workspace = true }
 comfy-table = { workspace = true }
 termcolor = { workspace = true }
 serde_json = { workspace = true }
